--- a/Mealsplanner/app/src/main/res/layout/activity_meal_by_country.xml
+++ b/Mealsplanner/app/src/main/res/layout/activity_meal_by_country.xml
@@ -5,14 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".meal_of_the_day.view.MealOfTheDayActivity">
+    tools:context=".meals_by_countries.view.MealByCountryActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RandomRecyclerView"
+        android:id="@+id/CountryRecyclerView"
         android:layout_width="409dp"
         android:layout_height="729dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
