--- a/Mealsplanner/app/src/main/res/layout/activity_main.xml
+++ b/Mealsplanner/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="?attr/colorPrimary"
         android:title="Food Planner"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- ScrollView for CardViews -->
     <ScrollView
@@ -47,21 +47,21 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Meal of the Day"
-                        android:textAppearance="?attr/textAppearanceHeadline6"/>
+                        android:textAppearance="?attr/textAppearanceHeadline6" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Explore today's special meal"
                         android:textAppearance="?attr/textAppearanceBody2"
-                        android:textColor="@android:color/darker_gray"/>
+                        android:textColor="@android:color/darker_gray" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -167,9 +167,9 @@
         android:id="@+id/fragment_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/system_tertiary_container_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card_scroll"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@android:color/darker_gray"/>
+        app:layout_constraintTop_toBottomOf="@id/card_scroll" />
 </androidx.constraintlayout.widget.ConstraintLayout>
