--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_of_the_day.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_of_the_day.xml
@@ -10,16 +10,19 @@
         android:id="@+id/meal_of_the_day_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="Meal of the Day"
+        android:textColor="@color/darkGreen"
         android:textSize="24sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RandomRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp" />
 </LinearLayout>
+
 
 
 
