--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_by_category.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_by_category.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Meals by Category"
-        android:textColor="@color/darkGreen"
+        android:textColor="@color/appTheme"
         android:textSize="24sp"
         android:textStyle="bold"/>
 
