--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_planner.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_planner.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".favourite.view.FavouriteMealsFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
@@ -12,16 +17,17 @@
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
         android:text="Meal Planner"
-        android:textColor="@color/darkGreen"
+        android:textColor="@color/appTheme"
         android:textSize="24sp"
         android:textStyle="bold" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mealPlannerRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mealPlannerRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="671dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1" />
 
 </LinearLayout>
+</ScrollView>
