--- a/Mealsplanner/app/src/main/res/layout/activity_meal_country_details.xml
+++ b/Mealsplanner/app/src/main/res/layout/activity_meal_country_details.xml
@@ -1,19 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/backgroundColor">
 
-    <TextView
-        android:id="@+id/country_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp" />
 
-    <ImageView
-        android:id="@+id/country_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop" />
+<!--    <TextView-->
+<!--        android:id="@+id/country_name"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="24sp" />-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/country_image"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:scaleType="centerCrop" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meals_recycler_view"
