--- a/Mealsplanner/app/src/main/res/layout/activity_splash.xml
+++ b/Mealsplanner/app/src/main/res/layout/activity_splash.xml
@@ -3,14 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGreen">
+    android:background="@color/appTheme"
+    android:padding="16dp">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieAnimationView"
-        android:layout_width="397dp"
-        android:layout_height="484dp"
-        android:layout_centerInParent="true"
+        android:layout_width="133dp"
+        android:layout_height="109dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         app:lottie_autoPlay="true"
         app:lottie_loop="false"
         app:lottie_rawRes="@raw/animationsplash" />
+
+    <TextView
+        android:id="@+id/splash_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:fontFamily="@string/material_motion_easing_linear"
+        android:textSize="24sp"
+        android:textColor="@color/backgroundColor"
+        android:textStyle="bold"
+        android:layout_toEndOf="@id/lottieAnimationView"
+        android:layout_marginStart="16dp"
+    android:layout_centerVertical="true" />
+
 </RelativeLayout>
