--- a/Mealsplanner/app/src/main/res/layout/counry_list_row.xml
+++ b/Mealsplanner/app/src/main/res/layout/counry_list_row.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
         android:textSize="20sp"
-        android:textColor="@color/darkGreen"
+        android:textColor="@color/appTheme"
         android:textStyle="bold"/>
 
 </LinearLayout>
