--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_by_country.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_by_country.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
         android:text="Meals by Country"
-        android:textColor="@color/darkGreen"
+        android:textColor="@color/appTheme"
         android:textSize="24sp"
         android:textStyle="bold" />
 
