--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_categories.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_categories.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
         android:text="Categories"
-        android:textColor="@color/darkGreen"
+        android:textColor="@color/appTheme"
         android:textSize="24sp"
         android:textStyle="bold" />
 
