--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_countries.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_countries.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="monospace"
             android:text="Countries"
-            android:textColor="@color/darkGreen"
+            android:textColor="@color/appTheme"
             android:textSize="24sp"
             android:textStyle="bold" />
 
