--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_search.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_search.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:background="@color/backgroundColor"
     android:padding="16dp">
 
     <TextView
@@ -13,76 +14,76 @@
         android:text="Search Meals"
         android:fontFamily="monospace"
         android:textSize="24sp"
-        android:textColor="@color/darkGreen"
+        android:textColor="@color/appTheme"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/searchBytxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="searchBy"
-        app:layout_constraintEnd_toStartOf="@id/radioGroup"
+        android:text="Search by"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/search_meals_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="28dp"
-        android:textSize="20dp"
+        android:layout_marginTop="16dp" />
 
-        />
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/searchBytxt"
-
-        >
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/searchBytxt"
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
             android:id="@+id/categoryRadioButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="byCategory"
+            android:text="Category"
             android:checked="true"
-            android:textSize="17dp"
-            android:defaultFocusHighlightEnabled="true"
-            />
+            android:textSize="17sp"
+            android:textColorHighlight="@color/appTheme"/>
 
         <RadioButton
             android:id="@+id/countryRadioButton2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="country"
-
-            android:textSize="17dp"
-            />
+            android:text="Country"
+            android:textSize="17sp"
+            android:textColorHighlight="@color/appTheme"/>
+        <!--            android:buttonTint="@color/appTheme" -->
 
         <RadioButton
             android:id="@+id/ingredientRadioButton3"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ingredient"
-            android:textSize="17dp"
-            />
+            android:text="Ingredient"
+            android:textSize="17sp"
+            android:backgroundTint="@color/appTheme"/>
     </RadioGroup>
 
     <SearchView
         android:id="@+id/searchViewtxt"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@drawable/rounded_search_view"
         app:layout_constraintTop_toBottomOf="@id/radioGroup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginTop="16dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/SearchRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/searchViewtxt"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
