--- a/Mealsplanner/app/src/main/res/layout/item_favourite.xml
+++ b/Mealsplanner/app/src/main/res/layout/item_favourite.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fav_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="8dp"
     android:background="@color/white"
-    android:elevation="4dp">
+    app:cardCornerRadius="16dp"
+    android:elevation="4dp"
+    app:cardBackgroundColor="@color/backgroundTwo">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/category_meal_image"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/favourite_meal_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:contentDescription=""
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/RoundedImageView" />
 
         <TextView
-            android:id="@+id/category_meal_title"
+            android:id="@+id/favourite_meal_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_below="@id/favourite_meal_image"
             android:text="Meal Name"
-            android:textColor="@color/black"
+            android:textColor="@color/darkToty"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-
-        <Button
+        <ImageView
             android:id="@+id/removeFavbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="8dp"
-            android:text="Remove from Favorites"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-    </LinearLayout>
-
+            android:layout_marginTop="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/favourite_meal_image"
+            android:src="@drawable/baseline_delete_24" />
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
