--- a/Mealsplanner/app/src/main/res/values/styles.xml
+++ b/Mealsplanner/app/src/main/res/values/styles.xml
@@ -2,7 +2,30 @@
 <resources>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@color/white</item> <!-- Change to your splash background color -->
+        <item name="android:windowBackground">@color/backgroundColor</item>
+    </style>
+    <style name="RoundedImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
+        <item name="colorControlActivated">@color/appTheme</item>
     </style>
 
+<!--    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
+<!--        <item name="colorPrimary">@color/appTheme</item>-->
+<!--        <item name="colorPrimaryDark">@color/appTheme</item>-->
+<!--        <item name="colorAccent">@color/white</item>-->
+<!--    </style>-->
+<!--    -->
+<!--    <style name="CustomDatePickerDialog" parent="Theme.AppCompat.Light.Dialog">-->
+<!--        <item name="android:background">@color/babypink</item>-->
+<!--        <item name="android:textColorPrimary">@color/white</item>-->
+<!--&lt;!&ndash;        <item name="android:colorAccent">@color/appTheme</item>&ndash;&gt;-->
+<!--&lt;!&ndash;        <item name="android:headerBackground">@color/appTheme</item>&ndash;&gt;-->
+<!--&lt;!&ndash;        <item name="android:buttonTint">@color/appTheme</item>&ndash;&gt;-->
+<!--    </style>-->
+
+<!--    <style name="CustomDatePicker" parent="android:Widget.DatePicker">-->
+<!--        <item name="android:calendarTextColor">@color/black</item>-->
+<!--        <item name="android:colorAccent">@color/appTheme</item>-->
+<!--    </style>-->
 </resources>
