--- a/Mealsplanner/app/src/main/res/values/themes.xml
+++ b/Mealsplanner/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.MealsPlanner" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorControlHighlight">@color/appTheme</item>
     </style>
 
     <style name="Theme.MealsPlanner" parent="Base.Theme.MealsPlanner" />
